--- a/src/app/view/view.component.html
+++ b/src/app/view/view.component.html
@@ -1,40 +1,123 @@
-<mat-form-field>
-    <mat-label>Filter</mat-label>
-    <input matInput (keyup)="applyFilter($event)" placeholder="Ex. ium" #input>
-  </mat-form-field>
-  
-  <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
-  
-    <!-- Position Column -->
-    <ng-container matColumnDef="position">
-      <th mat-header-cell *matHeaderCellDef> ID </th>
-      <td mat-cell *matCellDef="let element"> {{element.id}} </td>
-    </ng-container>
-  
-    <!-- Name Column -->
-    <ng-container matColumnDef="name">
-      <th mat-header-cell *matHeaderCellDef> First Name </th>
-      <td mat-cell *matCellDef="let element"> {{element.fname}} </td>
-    </ng-container>
-  
-    <!-- Weight Column -->
-    <ng-container matColumnDef="weight">
-      <th mat-header-cell *matHeaderCellDef> Last Name </th>
-      <td mat-cell *matCellDef="let element"> {{element.lname}} </td>
-    </ng-container>
-  
-    <!-- Symbol Column -->
-    <ng-container matColumnDef="symbol">
-      <th mat-header-cell *matHeaderCellDef> Phone Number </th>
-      <td mat-cell *matCellDef="let element"> {{element.phone}} </td>
-    </ng-container>
-  
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-  
-    <!-- Row shown when there is no matching data. -->
-    <tr class="mat-row" *matNoDataRow>
-      <td class="mat-cell" colspan="4">No data matching the filter "{{input.value}}"</td>
-    </tr>
-  </table>
-  
+
+<mat-tab-group class="AllTabs">
+    <mat-tab label="Recruiters">
+<div class="ViewRecruiters">
+    <div *ngFor="let recruiter of recruiters">
+    <mat-expansion-panel hideToggle>
+        <mat-expansion-panel-header>
+          <mat-panel-title>
+           <p>{{recruiter.fname}}  {{recruiter.lname}}</p>
+          </mat-panel-title>
+          <mat-panel-description>
+           <p><b>Phone Number:</b> {{recruiter.phone}}</p>
+           
+          </mat-panel-description>
+          <button type="button" name="Delete" class="delete-button" (click)="deleteRecruiter(recruiter.id)">Delete</button>
+        </mat-expansion-panel-header>
+        
+        <div *ngIf="recruiter.candidates && recruiter.candidates.length > 0">
+            <p>List of candidates assigned</p>
+           
+                <table mat-table [dataSource]="recruiter.candidates" class="mat-elevation-z8">
+                    <ng-container matColumnDef="fname">
+                      <th mat-header-cell *matHeaderCellDef> First Name </th>
+                      <td mat-cell *matCellDef="let element"> {{element.fname}} </td>
+                    </ng-container>
+                  
+                    <ng-container matColumnDef="lname">
+                      <th mat-header-cell *matHeaderCellDef> Last Name </th>
+                      <td mat-cell *matCellDef="let element"> {{element.lname}} </td>
+                    </ng-container>
+                  
+                    <ng-container matColumnDef="phone">
+                      <th mat-header-cell *matHeaderCellDef> Phone Number </th>
+                      <td mat-cell *matCellDef="let element"> {{element.phone}} </td>
+                    </ng-container>
+                  
+                    <ng-container matColumnDef="tech">
+                      <th mat-header-cell *matHeaderCellDef> Technology </th>
+                      <td mat-cell *matCellDef="let element"> {{element.tech}} </td>
+                    </ng-container>
+                    <ng-container matColumnDef="Delete">
+                        <th mat-header-cell *matHeaderCellDef>  </th>
+                        <td mat-cell *matCellDef="let element"> <button type="button" name="Delete" class="delete-button" (click)="deleteCandidateofRecruiter(recruiter.id, element.id)">Delete</button> </td>
+                      </ng-container>
+
+                   <!-- <td mat-cell ></td> -->
+                    
+                    <tr mat-header-row *matHeaderRowDef="candidateColumns"></tr>
+                    <tr mat-row *matRowDef="let row; columns: candidateColumns;"></tr>
+                   
+                  </table>
+                 
+                 
+        </div>
+        <div *ngIf="recruiter.candidates && recruiter.candidates.length === 0">
+            <p>
+                No candidates assigned for the recruiter yet..
+            </p>
+        </div>
+<br>
+        <button type="button" name="Add" (click)="openAssignCandidatesDialog(recruiter.id)">Add</button>
+      </mat-expansion-panel>
+    </div>
+</div>
+</mat-tab>
+<mat-tab label="Candidates">
+<div class="ViewCandidates">
+    <div *ngFor="let candidate of candidates">
+        <mat-expansion-panel hideToggle>
+            <mat-expansion-panel-header>
+              <mat-panel-title>
+               <p>{{candidate.fname}}  {{candidate.lname}}</p>
+              </mat-panel-title>
+              <mat-panel-description>
+               <p><b>Phone Number:</b> {{candidate.phone}}    <b>Technology:</b>      {{candidate.tech}}</p>
+              </mat-panel-description>
+              <button type="button" name="Delete" class="delete-button" (click)="deleteCandidate(candidate.id)">Delete</button>
+            </mat-expansion-panel-header>
+            
+            <div *ngIf="candidate.recInCand && candidate.recInCand.length > 0">
+                <p>List of Recruiters assigned</p>
+                <table mat-table [dataSource]="candidate.recInCand" class="mat-elevation-z8">
+                    <ng-container matColumnDef="fname">
+                      <th mat-header-cell *matHeaderCellDef> First Name </th>
+                      <td mat-cell *matCellDef="let element"> {{element.fname}} </td>
+                    </ng-container>
+                  
+                    <ng-container matColumnDef="lname">
+                      <th mat-header-cell *matHeaderCellDef> Last Name </th>
+                      <td mat-cell *matCellDef="let element"> {{element.lname}} </td>
+                    </ng-container>
+                  
+                    <ng-container matColumnDef="phone">
+                      <th mat-header-cell *matHeaderCellDef> Phone Number </th>
+                      <td mat-cell *matCellDef="let element"> {{element.phone}} </td>
+                    </ng-container>
+                  
+                    <ng-container matColumnDef="id">
+                      <th mat-header-cell *matHeaderCellDef> User Name </th>
+                      <td mat-cell *matCellDef="let element"> {{element.id}} </td>
+                    </ng-container>
+                    <ng-container matColumnDef="Delete">
+                        <th mat-header-cell *matHeaderCellDef> </th>
+                        <td mat-cell *matCellDef="let element"> <button type="button" name="Delete" class="delete-button" (click)="deleteCandidateofRecruiter(element.id,candidate.id)">Delete</button> </td>
+                      </ng-container>
+                  
+                    <tr mat-header-row *matHeaderRowDef="recruiterColumns"></tr>
+                    <tr mat-row *matRowDef="let row; columns: recruiterColumns;"></tr>
+                  </table>
+            </div>
+            <div *ngIf="candidate.recInCand && candidate.recInCand.length === 0">
+                <p>
+                    No recruiters assigned for the candidate yet..
+                </p>
+            </div>   
+          </mat-expansion-panel>
+    </div>
+</div>
+</mat-tab>
+<mat-tab label="View Submissions">
+    <app-viewsubmission></app-viewsubmission>
+</mat-tab>
+</mat-tab-group>
