--- a/src/app/edit/edit.component.html
+++ b/src/app/edit/edit.component.html
@@ -1,1 +1,28 @@
-<p>edit works!</p>
+<div>
+    <mat-expansion-panel hideToggle>
+        <mat-expansion-panel-header>
+            <mat-panel-title>
+                {{recruiter.fname}} {{recruiter.lname}}
+            </mat-panel-title>
+            <mat-panel-description>
+                {{recruiter.phone}}
+            </mat-panel-description>
+        </mat-expansion-panel-header>
+        <table mat-table [dataSource]="recruiter.candidates" class="mat-elevation-z8">
+            <ng-container matColumnDef="fname">
+              <th mat-header-cell *matHeaderCellDef> First Name </th>
+              <td mat-cell *matCellDef="let element"> {{element.fname}} </td>
+            </ng-container>
+            <ng-container matColumnDef="lname">
+                <th mat-header-cell *matHeaderCellDef>Last Name</th>
+                <td mat-cell *matCellDef="let element">{{element.lname}}</td>
+            </ng-container>
+            <ng-container matColumnDef="phone">
+                <th mat-header-cell *matHeaderCellDef>Phone</th>
+                <td mat-cell *matCellDef="let element">{{element.phone}}</td>
+            </ng-container>
+            <tr mat-header-row *matHeaderRowDef="candidateColumns"></tr>
+            <tr mat-row *matRowDef="let row; columns: candidateColumns;"></tr>
+        </table>
+    </mat-expansion-panel>
+</div>
